# sql-studio

./: .gitignore  CMakeLists.txt  MySQLClient.cpp  MySQLClient.h  README.md  build.sh  configure.sh  main.cpp  mysql_client.cpp  mysql_client.h  mysqlclient.cpp  packet.cpp  packet.h  payload.cpp  payload.h  run.sh  run_tests.sh  tlogindialog.cpp  tlogindialog.h  tlogindialog.ui  util.cpp  util.h
mysql/: CMakeLists.txt  mysql_client.cpp
mysql/include/: mysql_client.h  mysql_macros.h  packet.h  payload.h  util.h
mysql/packet/: packet.cpp  payload.cpp
mysql/util/: util.cpp
tests/: CMakeLists.txt
tests/parse/: CMakeLists.txt  main.cpp
tests/sha/: CMakeLists.txt  main.cpp
